Bug 94019 - [bisected] 3D acceleration broken with gallium/radeon: just get num_tile_pipes from the winsys
Summary: [bisected] 3D acceleration broken with gallium/radeon: just get num_tile_pipe...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
: 94025 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-06 03:29 UTC by Nick Sarnie
Modified: 2016-02-09 14:27 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
backtrace (6.43 KB, text/plain)
2016-02-06 03:29 UTC, Nick Sarnie
Details

Description Nick Sarnie 2016-02-06 03:29:40 UTC
Created attachment 121545 [details]
backtrace

Hi guys,

If I have commit 'gallium/radeon: just get num_tile_pipes from the winsys', everything I try to run gives me /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/gallium/drivers/radeon/r600_texture.c:562: r600_texture_get_htile_size: Assertion `0' failed.


I've attached a gdb backtrace of the assert. I'm on a HD 7950 TAHITI.

Let me know if you need anything,

sarnex
Comment 1 Ernst Sjöstrand 2016-02-06 14:44:01 UTC
There is a backtrace but no result of any bisect...?
Comment 2 Nick Sarnie 2016-02-06 15:14:49 UTC
(In reply to Ernst Sjöstrand from comment #1)
> There is a backtrace but no result of any bisect...?

I'm not sure what you mean. The bad commit is 'gallium/radeon: just get num_tile_pipes from the winsys'
Comment 3 Alexandre Demers 2016-02-07 16:08:51 UTC
(In reply to Ernst Sjöstrand from comment #1)
> There is a backtrace but no result of any bisect...?

I confirm the bisection section, see bug 94025.
294ec530c9829aead97487b1feb06361ef97cc2d is the first bad commit
commit 294ec530c9829aead97487b1feb06361ef97cc2d
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Sat Jan 30 01:52:58 2016 +0100

    gallium/radeon: just get num_tile_pipes from the winsys
    
    Reviewed-by: Michel Dänzer <michel.daenzer@amd.com>

:040000 040000 71cb2da01a5912443f2ca74f97e46533f50f50d8 964978b8372e95f18eb09db4158b032bf25611fb M	src


New way of setting num_pipes gives a value of 12, while previous was giving a value of 8 on a R9 280X.
Comment 4 Alexandre Demers 2016-02-07 16:11:32 UTC
*** Bug 94025 has been marked as a duplicate of this bug. ***
Comment 5 Marek Olšák 2016-02-09 14:27:36 UTC
Fixed by 83b4d701c082bb43dc710be9ec423171ea11e8d1.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.